feat: new version with tests