@@ -7,6 +7,8 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
 
 import java.math.BigDecimal;
+import java.util.HashMap;
+import java.util.Map;
 
 import static dojo.supermarket.model.TestHelper.assertBigDecimalEquals;
 import static dojo.supermarket.model.TestHelper.bd;
@@ -15,18 +17,18 @@ import static org.junit.jupiter.api.Assertions.*;
 @DisplayName("Teller Tests")
 class TellerTest {
 
-    private SupermarketCatalog catalog;
-    private Teller teller;
+	private Teller teller;
 
     private Product toothbrush;
     private Product apples;
     private Product rice;
     private Product toothpaste;
     private Product cherryTomatoes;
+    private Product bread;
 
     @BeforeEach
     void setUp() {
-        catalog = new FakeCatalog();
+	    SupermarketCatalog catalog = new FakeCatalog();
         teller = new Teller(catalog);
 
         toothbrush = new Product("toothbrush", ProductUnit.EACH);
@@ -34,12 +36,14 @@ class TellerTest {
         rice = new Product("rice", ProductUnit.EACH);
         toothpaste = new Product("toothpaste", ProductUnit.EACH);
         cherryTomatoes = new Product("cherry tomatoes", ProductUnit.EACH);
+        bread = new Product("bread", ProductUnit.EACH);
 
         catalog.addProduct(toothbrush, bd(0.99));
         catalog.addProduct(apples, bd(1.99));
         catalog.addProduct(rice, bd(2.49));
         catalog.addProduct(toothpaste, bd(1.79));
         catalog.addProduct(cherryTomatoes, bd(0.69));
+        catalog.addProduct(bread, bd(2.00));
     }
 
     @Test
@@ -70,7 +74,7 @@ class TellerTest {
         BigDecimal expected = bd(2).multiply(bd(0.99));
         assertBigDecimalEquals(expected, receipt.getTotalPrice());
         assertEquals(1, receipt.getDiscounts().size());
-        assertEquals("3 for 2", receipt.getDiscounts().get(0).description());
+        assertEquals("3 for 2", receipt.getDiscounts().getFirst().description());
     }
 
     @Test
@@ -337,6 +341,231 @@ class TellerTest {
                 .multiply(bd(0.8));
         assertBigDecimalEquals(expected, receipt.getTotalPrice());
         assertEquals(1, receipt.getDiscounts().size());
+    }
+
+    @Test
+    @DisplayName("Should not apply two for amount discount when quantity is less than 2")
+    void shouldNotApplyTwoForAmountDiscountWhenQuantityLessThan2() {
+        teller.addSpecialOffer(SpecialOfferType.TWO_FOR_AMOUNT,
+                cherryTomatoes, bd(0.99));
+
+        ShoppingCart cart = new ShoppingCart();
+        cart.addItemQuantity(cherryTomatoes, bd(1));
+
+        Receipt receipt = teller.checksOutArticlesFrom(cart);
+
+        assertBigDecimalEquals(bd(0.69), receipt.getTotalPrice());
+        assertTrue(receipt.getDiscounts().isEmpty());
+    }
+
+    @Test
+    @DisplayName("Should get loyalty manager")
+    void shouldGetLoyaltyManager() {
+        assertNotNull(teller.getLoyaltyManager());
+    }
+
+    @Test
+    @DisplayName("Should handle checkout without loyalty card")
+    void shouldHandleCheckoutWithoutLoyaltyCard() {
+        ShoppingCart cart = new ShoppingCart();
+        cart.addItemQuantity(bread, bd(1));
+
+        Receipt receipt = teller.checksOutArticlesFrom(cart, null, bd(0));
+
+        assertBigDecimalEquals(bd(2.00), receipt.getTotalPrice());
+        assertTrue(receipt.getDiscounts().isEmpty());
+    }
+
+    @Test
+    @DisplayName("Should set and use purchase date for coupons")
+    void shouldSetAndUsePurchaseDateForCoupons() {
+        teller.setPurchaseDate(java.time.LocalDate.of(2025, 11, 14));
+
+        ShoppingCart cart = new ShoppingCart();
+        cart.addItemQuantity(apples, bd(1));
+
+        Receipt receipt = teller.checksOutArticlesFrom(cart);
+
+        assertBigDecimalEquals(bd(1.99), receipt.getTotalPrice());
+    }
+
+    @Test
+    @DisplayName("Should handle checkout with loyalty card but zero points")
+    void shouldHandleCheckoutWithLoyaltyCardButZeroPoints() {
+        dojo.supermarket.model.loyalty.LoyaltyCard card =
+                new dojo.supermarket.model.loyalty.LoyaltyCard("LC123456");
+
+        ShoppingCart cart = new ShoppingCart();
+        cart.addItemQuantity(apples, bd(2));
+
+        Receipt receipt = teller.checksOutArticlesFrom(cart, card, bd(0));
+
+        BigDecimal expected = bd(2).multiply(bd(1.99));
+        assertBigDecimalEquals(expected, receipt.getTotalPrice());
+        assertBigDecimalEquals(expected, card.getPoints());
+    }
+
+    @Test
+    @DisplayName("Should handle checkout with loyalty card and negative points to use")
+    void shouldHandleCheckoutWithLoyaltyCardAndNegativePointsToUse() {
+        dojo.supermarket.model.loyalty.LoyaltyCard card =
+                new dojo.supermarket.model.loyalty.LoyaltyCard("LC123456", bd(100));
+
+        ShoppingCart cart = new ShoppingCart();
+        cart.addItemQuantity(apples, bd(1));
+
+        Receipt receipt = teller.checksOutArticlesFrom(cart, card, bd(-10));
+
+        BigDecimal expected = bd(1.99);
+        assertBigDecimalEquals(expected, receipt.getTotalPrice());
+        BigDecimal expectedPoints = bd(100).add(expected);
+        assertBigDecimalEquals(expectedPoints, card.getPoints());
+    }
+
+    @Test
+    @DisplayName("Should handle checkout without loyalty card and zero points")
+    void shouldHandleCheckoutWithoutLoyaltyCardAndZeroPoints() {
+        ShoppingCart cart = new ShoppingCart();
+        cart.addItemQuantity(rice, bd(1));
+
+        Receipt receipt = teller.checksOutArticlesFrom(cart, null, BigDecimal.ZERO);
+
+        assertBigDecimalEquals(bd(2.49), receipt.getTotalPrice());
+    }
+
+    @Test
+    @DisplayName("Should apply bundle and then regular offer")
+    void shouldApplyBundleAndThenRegularOffer() {
+        Map<Product, Integer> bundleProducts = new HashMap<>();
+        bundleProducts.put(toothbrush, 1);
+        bundleProducts.put(toothpaste, 1);
+        dojo.supermarket.model.bundle.ProductBundle bundle =
+                dojo.supermarket.model.bundle.ProductBundle.withDefaultDiscount(
+                        "Dental Bundle", bundleProducts);
+
+        teller.addProductBundle(bundle);
+        teller.addSpecialOffer(SpecialOfferType.TEN_PERCENT_DISCOUNT, rice, bd(10.0));
+
+        ShoppingCart cart = new ShoppingCart();
+        cart.addItemQuantity(toothbrush, bd(1));
+        cart.addItemQuantity(toothpaste, bd(1));
+        cart.addItemQuantity(rice, bd(2));
+
+        Receipt receipt = teller.checksOutArticlesFrom(cart);
+
+        BigDecimal bundlePrice = bd(0.99).add(bd(1.79)).multiply(bd(0.9));
+        BigDecimal ricePrice = bd(2).multiply(bd(2.49)).multiply(bd(0.9));
+        BigDecimal expected = bundlePrice.add(ricePrice);
+        assertBigDecimalEquals(expected, receipt.getTotalPrice());
+        assertEquals(2, receipt.getDiscounts().size());
+    }
+
+    @Test
+    @DisplayName("Should apply coupon and then regular offer")
+    void shouldApplyCouponAndThenRegularOffer() {
+        dojo.supermarket.model.coupon.Coupon coupon =
+                new dojo.supermarket.model.coupon.Coupon(
+                        "COUP123",
+                        apples,
+                        2,
+                        2,
+                        bd(50),
+                        java.time.LocalDate.of(2025, 12, 1),
+                        java.time.LocalDate.of(2025, 12, 31)
+                );
+
+        teller.addCoupon(coupon);
+        teller.addSpecialOffer(SpecialOfferType.THREE_FOR_TWO, toothbrush, bd(0));
+        teller.setPurchaseDate(java.time.LocalDate.of(2025, 12, 8));
+
+        ShoppingCart cart = new ShoppingCart();
+        cart.addItemQuantity(apples, bd(4));
+        cart.addItemQuantity(toothbrush, bd(3));
+
+        Receipt receipt = teller.checksOutArticlesFrom(cart);
+
+        BigDecimal applesTotal = bd(4).multiply(bd(1.99));
+        BigDecimal couponDiscount = bd(2).multiply(bd(1.99)).multiply(bd(0.5));
+        BigDecimal toothbrushTotal = bd(2).multiply(bd(0.99));
+        BigDecimal expected = applesTotal.add(toothbrushTotal).subtract(couponDiscount);
+        assertBigDecimalEquals(expected, receipt.getTotalPrice());
+    }
+
+    @Test
+    @DisplayName("Should handle multiple bundles")
+    void shouldHandleMultipleBundles() {
+        Map<Product, Integer> bundle1Products = new HashMap<>();
+        bundle1Products.put(toothbrush, 1);
+        bundle1Products.put(toothpaste, 1);
+
+        Map<Product, Integer> bundle2Products = new HashMap<>();
+        bundle2Products.put(apples, 1);
+        bundle2Products.put(rice, 1);
+
+        dojo.supermarket.model.bundle.ProductBundle bundle1 =
+                dojo.supermarket.model.bundle.ProductBundle.withDefaultDiscount(
+                        "Dental Bundle", bundle1Products);
+        dojo.supermarket.model.bundle.ProductBundle bundle2 =
+                dojo.supermarket.model.bundle.ProductBundle.withDefaultDiscount(
+                        "Food Bundle", bundle2Products);
+
+        teller.addProductBundle(bundle1);
+        teller.addProductBundle(bundle2);
+
+        ShoppingCart cart = new ShoppingCart();
+        cart.addItemQuantity(toothbrush, bd(1));
+        cart.addItemQuantity(toothpaste, bd(1));
+        cart.addItemQuantity(apples, bd(1));
+        cart.addItemQuantity(rice, bd(1));
+
+        Receipt receipt = teller.checksOutArticlesFrom(cart);
+
+        BigDecimal dentalBundle = bd(0.99).add(bd(1.79)).multiply(bd(0.9));
+        BigDecimal foodBundle = bd(1.99).add(bd(2.49)).multiply(bd(0.9));
+        BigDecimal expected = dentalBundle.add(foodBundle);
+        assertBigDecimalEquals(expected, receipt.getTotalPrice());
+        assertEquals(2, receipt.getDiscounts().size());
+    }
+
+    @Test
+    @DisplayName("Should handle complex scenario with all discount types")
+    void shouldHandleComplexScenarioWithAllDiscountTypes() {
+        Map<Product, Integer> bundleProducts = new HashMap<>();
+        bundleProducts.put(toothbrush, 1);
+        bundleProducts.put(toothpaste, 1);
+        dojo.supermarket.model.bundle.ProductBundle bundle =
+                dojo.supermarket.model.bundle.ProductBundle.withDefaultDiscount(
+                        "Dental Bundle", bundleProducts);
+
+        dojo.supermarket.model.coupon.Coupon coupon =
+                new dojo.supermarket.model.coupon.Coupon(
+                        "COUP456",
+                        apples,
+                        2,
+                        2,
+                        bd(25),
+                        java.time.LocalDate.of(2025, 12, 1),
+                        java.time.LocalDate.of(2025, 12, 31)
+                );
+
+        dojo.supermarket.model.loyalty.LoyaltyCard card =
+                new dojo.supermarket.model.loyalty.LoyaltyCard("LC999", bd(50));
+
+        teller.addProductBundle(bundle);
+        teller.addCoupon(coupon);
+        teller.addSpecialOffer(SpecialOfferType.THREE_FOR_TWO, rice, bd(0));
+        teller.setPurchaseDate(java.time.LocalDate.of(2025, 12, 8));
+
+        ShoppingCart cart = new ShoppingCart();
+        cart.addItemQuantity(toothbrush, bd(1));
+        cart.addItemQuantity(toothpaste, bd(1));
+        cart.addItemQuantity(apples, bd(4));
+        cart.addItemQuantity(rice, bd(3));
+
+        Receipt receipt = teller.checksOutArticlesFrom(cart, card, bd(25));
+
+        assertNotNull(receipt);
+        assertTrue(receipt.getDiscounts().size() >= 3);
     }
 }
 
